--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div id="control-bar">
+            <button id="reset-button">
+                Click here to reset.
+            </button>
+        </div>
+
         <div id="container">
-            
+
         </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
