switched to HSL format

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         </div>
         <div class="controls">
             <span>Colour choice</span><br>
-            <input type="radio" id="red-radio" name="colour-radios" value="yes">
+            <input type="radio" id="red-radio" name="colour-radios">
             <label for="red-radio">Red</label>
-            <input type="radio" id="random-radio" name="colour-radios" value="yes">
+            <input type="radio" id="random-radio" name="colour-radios">
             <label for="random-radio">Random</label>
+            <input type="radio" id="darken-radio" name="darken-radio">
+            <label for="darken-radio">Darken</label>
         </div>
         
         <div id="container">
