--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="controls">
-            <button onclick="newGrid()">New grid</button>
-            <button onclick="resetColours()">Reset grid</button>
-            <button onclick="testFunction()">Test button</button>
-        </div>
-        <div class="controls">
-            <span>Colour choice</span><br>
-            <input type="radio" id="red-radio" name="colour-radios">
-            <label for="red-radio">Red</label>
-            <input type="radio" id="random-radio" name="colour-radios">
-            <label for="random-radio">Random</label>
-            <input type="radio" id="darken-radio" name="darken-radio">
-            <label for="darken-radio">Darken</label>
-        </div>
-        
-        <div id="container">
-        </div>       
-        <script src="index.js" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="frame">
+      
+      <div class="frame-gap"><h1>Etch-a-Sketch</h1>  </div>
+      <div id="container"></div>
+      <div class="controls">
+        <button onclick="newGrid()">New grid</button>
+        <button onclick="resetColours()">Reset grid</button>
+        <button onclick="testFunction()">Test button</button>
+      </div>
+      <div class="controls">
+        <span>Colour choice</span><br />
+        <input type="radio" id="red-radio" name="colour-radios" />
+        <label for="red-radio">Black</label>
+        <input type="radio" id="random-radio" name="colour-radios" />
+        <label for="random-radio">Random</label>
+
+      </div>
+      <div class="frame-gap"></div>
+    </div>
+
+    <script src="index.js" async defer></script>
+  </body>
 </html>
